fixes a bug where the submit button in the comment form is not visually aligned

--- a/frontend/ui/arboreal.styles/_arboreal.style.pages.blog.scss
+++ b/frontend/ui/arboreal.styles/_arboreal.style.pages.blog.scss
@@ -1509,7 +1509,6 @@
 					@include borderInset("", white, 2px);
 					
 					margin-left: auto;
-					margin-right: -4px;
 					
 					@include text(20px, 27px, white);
 					@include transition(.25s);
